auto-test/tests/chapter_18/invalid_struct_tags/member_type_undeclared.c
struct s {
    
    
    
    
    struct a b;
};